  and NumericRangeFilter now have Integer, Long, Float, Double as type param.
  (Uwe Schindler)

* LUCENE-1856: Remove Hits and all references from core and contrib.
  (Michael Busch)

* LUCENE-1957: Remove Filter.bits(IndexReader) method and make 
               Filter.getDocIdSet(IndexReader) abstract. (Michael Busch)

* LUCENE-1960: Remove deprecated Field.Store.COMPRESS. (Michael Busch)

Bug fixes

New features

* LUCENE-1933: Provide a convenience AttributeFactory that creates a
  Token instance for all basic attributes.  (Uwe Schindler)

Optimizations

Documentation

Build

* LUCENE-486: Remove test->demo dependencies. (Michael Busch)

Test Cases

======================= Release 2.9.0 2009-09-23 =======================

Changes in backwards compatibility policy

 * LUCENE-1575: Searchable.search(Weight, Filter, int, Sort) no
    longer computes a document score for each hit by default.  If
    document score tracking is still needed, you can call
    IndexSearcher.setDefaultFieldSortScoring(true, true) to enable
    both per-hit and maxScore tracking; however, this is deprecated
    and will be removed in 3.0.

    Alternatively, use Searchable.search(Weight, Filter, Collector)
    and pass in a TopFieldCollector instance, using the following code
    sample:
 
    <code>
      TopFieldCollector tfc = TopFieldCollector.create(sort, numHits, fillFields, 
                                                       true /* trackDocScores */,
                                                       true /* trackMaxScore */,
                                                       false /* docsInOrder */);
      searcher.search(query, tfc);
      TopDocs results = tfc.topDocs();
    </code>

    Note that your Sort object cannot use SortField.AUTO when you
    directly instantiate TopFieldCollector.

    Also, the method search(Weight, Filter, Collector) was added to
    the Searchable interface and the Searcher abstract class to