@@ -343,9 +343,9 @@ public class TestTermRangeFilter extends BaseTestRangeFilter {
                                              IndexWriter.MaxFieldLength.LIMITED);
         Document doc = new Document();
         doc.add(new Field("content","\u0633\u0627\u0628", 
-                          Field.Store.YES, Field.Index.UN_TOKENIZED));
+                          Field.Store.YES, Field.Index.NOT_ANALYZED));
         doc.add(new Field("body", "body",
-                          Field.Store.YES, Field.Index.UN_TOKENIZED));
+                          Field.Store.YES, Field.Index.NOT_ANALYZED));
         writer.addDocument(doc);
             
         writer.optimize();
@@ -387,9 +387,9 @@ public class TestTermRangeFilter extends BaseTestRangeFilter {
         for (int docnum = 0 ; docnum < words.length ; ++docnum) {   
             Document doc = new Document();
             doc.add(new Field("content", words[docnum], 
-                              Field.Store.YES, Field.Index.UN_TOKENIZED));
+                              Field.Store.YES, Field.Index.NOT_ANALYZED));
             doc.add(new Field("body", "body",
-                              Field.Store.YES, Field.Index.UN_TOKENIZED));
+                              Field.Store.YES, Field.Index.NOT_ANALYZED));
             writer.addDocument(doc);
         }
         writer.optimize();
